# KadinWPortfolio

CaptureOneAutomation/: AutoScriptC1.scpt  ReadMe.rtf  batchCompleteMove.scpt  empty_folder_move.py  processing_empty_check.py  python_folder_action.py
FantasyFootballDataExcel/: Fantasy_Stats.xlsx
FastAPI_SKLEARN_pydantic/: .dockerignore
FastAPI_SKLEARN_pydantic/lab1/: .coverage
FastAPI_SKLEARN_pydantic/lab1/src/: main.py
FastAPI_SKLEARN_pydantic/lab1/tests/: test_src.py
FastAPI_SKLEARN_pydantic/lab2/: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml
FastAPI_SKLEARN_pydantic/lab2/src/: housing_predict.py  main.py
FastAPI_SKLEARN_pydantic/lab2/tests/: test_api.py  test_src.py
Pytorch_proj/: pytorch_weapon_cctv.ipynb
SQLiteDatabaseModel/: ReadMe.txt  ReadMe1.txt  debugging_notes.md  main.py  menu.py  socialnetwork_model.py  test_main.py  user_status.py  users.py
django_blog/: db.sqlite3
