[project]
name = "lab2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
  "fastapi[standard] (>=0.128.0,<0.129.0)",
  "uvicorn[standard] (>=0.40.0,<0.41.0)",
  "scikit-learn==1.8.0",
  "numpy>=2.4.2,<3.0.0",
  "joblib>=1.5.3,<2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10.0.0",
  "httpx>=0.28.1,<0.29.0",
  "ruff>=0.14.11,<0.15.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
